jwt token eklendi

--- a/.gitignore
+++ b/.gitignore
@@ -404,3 +404,7 @@ API/Picgram.db
 API/Picgram.db-wal
 API/Picgram.db-shm
 API/Picgram.db-wal
+API/.DS_Store
+API/Picgram.db-shm
+API/Picgram.db-shm
+API/Picgram.db-wal
