--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "SecretKey": "YourSuperSecretKey123! josdfjo snjos fnjsdjnf ..sd." 
+  }
 }
