--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -10,5 +10,6 @@
     "Issuer": "YourIssuer",
     "Audience": "YourAudience",
     "SecretKey": "YourSuperSecretKey123! josdfjo snjos fnjsdjnf ..sd." 
-  }
+  },
+  "FrontendUrl": "http://localhost:5173"
 }
