--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -11,5 +11,5 @@
     "Audience": "YourAudience",
     "SecretKey": "YourSuperSecretKey123! josdfjo snjos fnjsdjnf ..sd." 
   },
-  "FrontendUrl": "http://localhost:5173"
+  "FrontendUrl": "https://picgram.onrender.com"
 }
